Home page content integrated

--- a/personal-website/layouts/_default/list.html
+++ b/personal-website/layouts/_default/list.html
@@ -10,7 +10,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -30,7 +30,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -50,7 +50,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -70,7 +70,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -90,7 +90,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -110,7 +110,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -130,7 +130,7 @@
             <div class="card">
                 <div class="card-status-top bg-primary"></div>
                 <div class="card-img-bottom img-responsive img-responsive-21x9"
-                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg)"></div>
+                    style="background-image: url(/static/photos/56614e12b2a7bd68.jpg);padding-top:18%;"></div>
                 <div class="card-body">
                     <h3 class="card-title">Card with top status</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
