--- a/personal-website/layouts/_default/single.html
+++ b/personal-website/layouts/_default/single.html
@@ -70,7 +70,43 @@
                             <div class="card-title mb-1">Thatcher Keel</div>
                             <div class="text-muted">VP Sales</div>
                         </div>
-                        <a href="#" class="card-btn">View full profile</a>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="mb-2">
+                                <Br />
+                                <a href="{{ .Site.Params.github_link }}" class="btn btn-github w-100" target="_blank">
+                                    <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                        <path
+                                            d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                                        </path>
+                                    </svg>
+                                    Github Profile
+                                </a>
+                                <br /><br />
+                                <a href="{{ .Site.Params.resume_link }}" class="btn btn-info active w-100">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        class="icon icon-tabler icon-tabler-book-download" width="24" height="24"
+                                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                        <path d="M12 20h-6a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12v5"></path>
+                                        <path d="M13 16h-7a2 2 0 0 0 -2 2"></path>
+                                        <path d="M15 19l3 3l3 -3"></path>
+                                        <path d="M18 22v-9"></path>
+                                    </svg>
+                                    Download CV
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <center>
