--- a/personal-website/layouts/partials/footer/site-footer.html
+++ b/personal-website/layouts/partials/footer/site-footer.html
@@ -3,19 +3,19 @@
         <div class="row text-center align-items-center flex-row-reverse">
 
             <center>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline" width="24"
-                    height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
+
+                Made with alchemy of love and chilled coffee! <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon text-pink icon-filled icon-inline" width="24" height="24" viewBox="0 0 24 24"
+                    stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
                     </path>
                 </svg>
-                Made with love in india!
 
                 <Br />
                 <br />
 
-                Copyright © 2022
+                Copyright © {{ now.Year }}
                 <a href="/" class="link-secondary">SolutionCoder.com</a><br />
                 All rights reserved.
             </center>
