--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -11,7 +11,7 @@
                             style="background-image: url({{ .Site.Params.coder_photo }})"></span>
                     </div>
                     <div class="card-title mb-1">{{ .Site.Params.coder_name }}</div>
-                    <div class="text-muted">{{ .Site.Params.coder_bio }}</div>
+                    <div class="text">{{ .Site.Params.coder_bio }}</div>
                 </div>
 
             </div>
@@ -194,12 +194,12 @@
 
                 </div>
                 <div class="card-body p-0">
-                    <p style="padding:10px;font-size:16px;">I'm Anil, I'm an aspiring tech-enthusiast with a sound grip
-                        on very diverse set of toolsets which help me manifest possibilities into technical realities. I
-                        can help you code your next web-development project.
+                    <p style="padding:10px;font-size:16px;">I'm Anil, an aspiring tech-enthusiast with sound grip
+                        on very diverse set of toolsets which help me manifest possibilities into technical realities.
                         <br /><br />
                         I've special expertise in creating and managing I.T infrastructures for deploying
-                        highly-available and scalable web applications. I can handle all your DevOps Necessities.
+                        highly-available and scalable web applications. I can handle all your DevOps and Web-development
+                        Necessities.
                         </br><br />
                         I admire the art of optimising and enhancing Business Logics, creating business models and S.O.P
                         for all new ventures, this helps me love my work even more!
@@ -232,6 +232,7 @@
                 <center>
                     <h3 class="mb-3">Available Services:</h3>
                 </center>
+
 
                 <div class="col-md-6 col-xl-3">
                     <div class="card card-sm">
@@ -388,7 +389,7 @@
                                     <div class="col-auto">
 
                                         <span class="avatar"
-                                            style="background-image: url({{ index $.Site.Params.arsenal_list_images $list_index }});height:3.5rem;width:3.5rem;"></span>
+                                            style="background: transparent url({{ index $.Site.Params.arsenal_list_images $list_index }}) no-repeat center;height:64px;width:64px;"></span>
 
                                     </div>
                                     <div class="col">
