--- a/personal-website/layouts/partials/footer/scripts.html
+++ b/personal-website/layouts/partials/footer/scripts.html
@@ -2,7 +2,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<script id="dsq-count-scr" src="//solution-coder.disqus.com/count.js" async></script>
 
 <script>
     $(document).ready(function () {
