--- a/personal-website/layouts/partials/footer/scripts.html
+++ b/personal-website/layouts/partials/footer/scripts.html
@@ -29,3 +29,22 @@
         })
     })
 </script>
+
+
+
+<script>
+        (function (d, t) {
+            var BASE_URL = "https://app.chatwoot.com";
+            var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+            g.src = BASE_URL + "/packs/js/sdk.js";
+            g.defer = true;
+            g.async = true;
+            s.parentNode.insertBefore(g, s);
+            g.onload = function () {
+                window.chatwootSDK.run({
+                    websiteToken: 'j3YaZPH4a56tfHRAS2nCdXsu',
+                    baseUrl: BASE_URL
+                })
+            }
+        })(document, "script");
+</script>
