--- a/personal-website/layouts/partials/footer/site-footer.html
+++ b/personal-website/layouts/partials/footer/site-footer.html
@@ -26,7 +26,7 @@
                 <Br /><br />
 
                 Copyright © {{ now.Year }}
-                <a href="/" class="link-secondary">SolutionCoder.com</a><br />
+                <a href="/" class="link-secondary">AnilDewani.com</a><br />
                 All rights reserved.
             </center>
 
