--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -175,6 +175,61 @@
                 </div>
 
             </div>
+            <br />
+            <div class="card">
+                <div class="card-body">
+                    <div class="mb-2">
+                        <Br />
+                        <center>
+                            <h3>Connect with me:</h3>
+
+                            <a href="{{ .Site.Params.email_link }}" class="btn" target="_blank">&nbsp;&nbsp;&nbsp;
+                                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at"
+                                    width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <circle cx="12" cy="12" r="4"></circle>
+                                    <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28"></path>
+                                </svg>
+
+                            </a>
+
+                            <a href="{{ .Site.Params.linkedin_link }}" class="btn" target="_blank">&nbsp;&nbsp;&nbsp;
+                                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-linkedin" width="24" height="24"
+                                    viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <rect x="4" y="4" width="16" height="16" rx="2"></rect>
+                                    <line x1="8" y1="11" x2="8" y2="16"></line>
+                                    <line x1="8" y1="8" x2="8" y2="8.01"></line>
+                                    <line x1="12" y1="16" x2="12" y2="11"></line>
+                                    <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+                                </svg>
+
+                            </a>
+
+
+                            <a href="{{ .Site.Params.telegram_link }}" class="btn" target="_blank">&nbsp;&nbsp;&nbsp;
+                                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-telegram" width="24" height="24"
+                                    viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4"></path>
+                                </svg>
+                            </a>
+
+
+                        </center>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
 
         <div class="col-md-8 col-xl-9">
@@ -393,7 +448,7 @@
 
                                     </div>
                                     <div class="col">
-                                        <a href="#" class="text-reset d-block" style="font-weight: bold;"><svg
+                                        <div class="text-reset d-block" style="font-weight: bold;"><svg
                                                 xmlns="http://www.w3.org/2000/svg"
                                                 class="icon icon-tabler icon-tabler-arrow-big-right" width="24"
                                                 height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
@@ -402,7 +457,7 @@
                                                 <path
                                                     d="M4 9h8v-3.586a1 1 0 0 1 1.707 -.707l6.586 6.586a1 1 0 0 1 0 1.414l-6.586 6.586a1 1 0 0 1 -1.707 -.707v-3.586h-8a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1z">
                                                 </path>
-                                            </svg>&nbsp;{{ . }}</a>
+                                            </svg>&nbsp;{{ . }}</div>
 
                                         <div class="">{{ index
                                             $.Site.Params.arsenal_list_message $list_index }}</div>
@@ -410,14 +465,7 @@
                                     <div class="col-auto">
                                         <a href="#" class="list-group-item-actions">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/star -->
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24"
-                                                height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-                                                fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                                <path
-                                                    d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z">
-                                                </path>
-                                            </svg>
+
                                         </a>
                                     </div>
                                 </div>
