Site re-alignment, change of logo and more.

--- a/personal-website/layouts/photography/list.html
+++ b/personal-website/layouts/photography/list.html
@@ -37,7 +37,7 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center">
                         <span class="avatar me-3 rounded"
-                            style="background-image: url(/static/avatars/000m.jpg)"></span>
+                            style="background-image: url({{ $.Site.Params.coder_photo }})"></span>
                         <div>
                             <div>{{ . }}</div>
                             <div class="text-muted">{{ index $.Site.Params.photography_sub_titles $list_index }}</div>
