--- a/personal-website/layouts/partials/header/site-navigation.html
+++ b/personal-website/layouts/partials/header/site-navigation.html
@@ -5,7 +5,7 @@
         </button>
         <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
             <a href=" /">
-                <img src="{{ .Site.Params.website_logo }}" style="height:2.75rem;" alt="Tabler"
+                <img src="{{ .Site.Params.website_logo }}" style="height:1.55rem;padding-right:40px;" alt="Tabler"
                     class="navbar-brand-image">
             </a>
         </h1>
@@ -13,7 +13,7 @@
 
 
         </div>
-        <div class="collapse navbar-collapse" id="navbar-menu">
+        <div class="collapse navbar-collapse" id="navbar-menu" style="padding-left:90px;">
             <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -75,6 +75,28 @@
                             </span>
                             <span class="nav-link-title">
                                 Photography
+                            </span>
+
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about/">
+                            <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                <!-- Download SVG icon from http://tabler-icons.io/i/star -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-aperture"
+                                    width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <circle cx="12" cy="12" r="9"></circle>
+                                    <line x1="3.6" y1="15" x2="14.15" y2="15"></line>
+                                    <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(72 12 12)"></line>
+                                    <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(144 12 12)"></line>
+                                    <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(216 12 12)"></line>
+                                    <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(288 12 12)"></line>
+                                </svg>
+                            </span>
+                            <span class="nav-link-title">
+                                About Me
                             </span>
 
                         </a>
