--- a/personal-website/layouts/_default/single.html
+++ b/personal-website/layouts/_default/single.html
@@ -7,6 +7,7 @@
                 <div class="card-body">
                     <div class="markdown">
                         <h1> {{ .Params.title }} </h1>
+                        <h4> Read Time: {{.Params.read_time }} </h4>
                         <br />
                         <div style="line-height: 1.58;margin-bottom: 1rem;margin-top: 1rem;font-size:18px;">
                             {{ .Content }}
