--- a/personal-website/layouts/partials/header/site-navigation.html
+++ b/personal-website/layouts/partials/header/site-navigation.html
@@ -1,6 +1,7 @@
 <header class="navbar navbar-expand-md navbar-light d-print-none">
     <div class="container-xl">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+        <button class="navbar-toggler" aria-label="Navigation Bar" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbar-menu">
             <span class="navbar-toggler-icon"></span>
         </button>
         <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
