--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -94,7 +94,7 @@
                     <p>Since programming code is an very structured form of creation, there are verstatile ways of
                         creating code, there is a very huge scope of subjective choices to be made when building I.T
                         infrastructures and keeping them reliable and resilient to their functionalities. Click on link
-                        below to read more about my programming philsophy and the best practices i discovered during my
+                        below to read more about my programming philsophy and the best practices I discovered during my
                         experience</p>
                     <center>
                         <div class="empty-img"><img src="./static/illustrations/undraw_quitting_time_dm8t.svg"
@@ -146,7 +146,7 @@
                         I admire the art of optimising and enhancing Business Logic and creating functional S.O.P for
                         business operations.
                         <br /><br />
-                        In my free time, i try to give back to the world by releasing open-source projects.
+                        In my free time, I try to give back to the world by releasing open-source projects.
                         <br /><br />
                         <a href="/about/">Click Here</a> to read more about me!
                     </p>
