--- a/personal-website/layouts/partials/head/metadata.html
+++ b/personal-website/layouts/partials/head/metadata.html
@@ -1,2 +1,18 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+{{ $description := "" }}
+{{ if .IsPage }}
+{{ if .Params.Description }}
+{{ $description = .Params.Description }}
+{{ else }}
+{{ $description = .Summary }}
+{{ end }}
+
+{{ else if .Params.Description }}
+{{ $description = .Params.Description }}
+
+{{ else }}
+{{ $description = .Site.Params.Description }}
+
+{{ end }}
+<meta name="description" content="{{ $description }}">
