--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -80,6 +80,22 @@
             Github Profile
           </a>
 
+          <br /><Br />
+          <a href="{{ .Site.Params.skillsets_link }}" class="btn btn-indigo w-100" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-list-tree" width="44"
+              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M9 6h11" />
+              <path d="M12 12h8" />
+              <path d="M15 18h5" />
+              <path d="M5 6v.01" />
+              <path d="M8 12v.01" />
+              <path d="M11 18v.01" />
+            </svg>
+            Skillsets
+          </a>
+
 
         </div>
 
@@ -144,8 +160,7 @@
             business operations.
             <br /><br />
             In my free time, I try to give back to the world by releasing open-source projects.
-            <br /><br />
-            <a href="/about/">Click Here</a> to read more about me!
+            <br />
           </p>
 
 
@@ -171,16 +186,13 @@
             <div class="card-img-bottom img-responsive img-responsive-21x9"
               style="background-image: url({{ .Params.cover_photo }});padding-top:18%;"></div>
             <div class="card-body">
-              <h3 class="card-title">{{.Title}}</h3>
+              <a class="card-title" href="{{ .Permalink }}"> {{ .Title }}</a>
               <p class="text-muted">{{ .Summary }}</p>
             </div>
             <div class="card-footer">
 
               <div class="d-flex">
-                <p style="padding-top:5px;font-size:12px;">
-                  {{ .Params.read_time }} read
-                </p>
-                <a href="{{.Permalink}}" class="btn btn-github ms-auto">Read More</a>
+                {{ .Params.read_time }} read
               </div>
             </div>
           </div>
