--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -81,7 +81,7 @@
           </a>
 
           <br /><Br />
-          <a href="{{ .Site.Params.skillsets_link }}" class="btn btn-indigo w-100" target="_blank">
+          <a href="{{ .Site.Params.skillsets_link }}" class="btn btn-indigo w-100">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-list-tree" width="44"
               height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
               stroke-linejoin="round">
