enhanced sidebar to include appropriate links

--- a/personal-website/layouts/index.html
+++ b/personal-website/layouts/index.html
@@ -96,41 +96,54 @@
             Skillsets
           </a>
 
+          <br /><Br />
+          <a href="{{ .Site.Params.dotfiles_link }}" class="btn btn-teal w-100" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code-dots" width="44"
+              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M15 12h.01" />
+              <path d="M12 12h.01" />
+              <path d="M9 12h.01" />
+              <path d="M6 19a2 2 0 0 1 -2 -2v-4l-1 -1l1 -1v-4a2 2 0 0 1 2 -2" />
+              <path d="M18 19a2 2 0 0 0 2 -2v-4l1 -1l-1 -1v-4a2 2 0 0 0 -2 -2" />
+            </svg>
+            dotfiles
+          </a>
+
+
+          <br /><Br />
+          <a href="{{ .Site.Params.resume_link }}" class="btn btn-cyan w-100" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="44" height="44"
+              viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
+              <path d="M7 11l5 5l5 -5" />
+              <path d="M12 4l0 12" />
+            </svg>
+            Download CV
+
+          </a>
+
+          <br /><Br />
+          <a href="{{ .Site.Params.photography_link }}" class="btn btn-secondary w-100">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-album" width="44" height="44"
+              viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+              <path d="M12 4v7l2 -2l2 2v-7" />
+            </svg>
+            Photography
+
+          </a>
+
 
         </div>
 
       </div>
       <br />
-
-      <div class="card">
-
-        <div class="card-body">
-          <p style="font-weight: bold; font-size: 20px;" class="card-title">My Code Development Philosophy</p>
-          <p>Since programming code is an very structured form of creation, there are verstatile ways of
-            creating code, there is a very huge scope of subjective choices to be made when building I.T
-            infrastructures and keeping them reliable and resilient to their functionalities. Click on link
-            below to read more about my programming philsophy and the best practices I discovered during my
-            experience</p>
-          <center>
-            <div class="empty-img"><img src="./static/illustrations/undraw_quitting_time_dm8t.svg" height="128" alt="">
-            </div>
-            <div class="empty-action">
-              <a href="/blog/my-coding-philosophy/" class="btn btn-github">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-forward" width="24"
-                  height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                  stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <path d="M15 11l4 4l-4 4m4 -4h-11a4 4 0 0 1 0 -8h1"></path>
-                </svg>
-                Read Full Article
-              </a>
-            </div>
-          </center>
-        </div>
-      </div>
-
-
-
 
     </div>
 
